// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachmentsList When parent is Target Document should treat all Attachments as read only 1`] = `
<div>
  <h2>
    Attachments
  </h2>
  <div
    className="attachments-list"
  >
    <Connect(Attachment)
      file={
        Object {
          "filename": "filename2.ext",
          "originalname": "A Human name 2",
        }
      }
      isSourceDocument={false}
      key="0"
      parentId="parentId"
      parentSharedId="parentSharedId"
      readOnly={true}
      storeKey="storeKey"
    />
    <Connect(Attachment)
      file={
        Object {
          "filename": "filename1.ext",
          "originalname": "Human name 1",
        }
      }
      isSourceDocument={false}
      key="1"
      parentId="parentId"
      parentSharedId="parentSharedId"
      readOnly={true}
      storeKey="storeKey"
    />
  </div>
</div>
`;

exports[`AttachmentsList should render a sorted list of attachments (files) 1`] = `
<div>
  <Connect(NeedAuthorization)>
    <div
      className="attachment-buttons main-file"
    >
      <h2>
        Document
        <Tip>
          Main file: add a file as the main content
        </Tip>
      </h2>
      <Connect(UploadButton)
        documentId="parentId"
        documentSharedId="parentSharedId"
        storeKey="storeKey"
      />
    </div>
  </Connect(NeedAuthorization)>
  <h2>
    Attachments
  </h2>
  <div
    className="attachments-list"
  >
    <Connect(Attachment)
      file={
        Object {
          "filename": "filename2.ext",
          "originalname": "A Human name 2",
        }
      }
      isSourceDocument={false}
      key="0"
      parentId="parentId"
      parentSharedId="parentSharedId"
      readOnly={false}
      storeKey="storeKey"
    />
    <Connect(Attachment)
      file={
        Object {
          "filename": "filename1.ext",
          "originalname": "Human name 1",
        }
      }
      isSourceDocument={false}
      key="1"
      parentId="parentId"
      parentSharedId="parentSharedId"
      readOnly={false}
      storeKey="storeKey"
    />
  </div>
  <Connect(NeedAuthorization)
    roles={
      Array [
        "admin",
        "editor",
      ]
    }
  >
    <div
      className="attachment-add"
    >
      <Connect(UploadAttachment)
        entityId="parentSharedId"
        storeKey="storeKey"
      />
    </div>
  </Connect(NeedAuthorization)>
</div>
`;

exports[`AttachmentsList when files is empty should add button in Downloads section 1`] = `
<div>
  <Connect(NeedAuthorization)>
    <div
      className="attachment-buttons main-file"
    >
      <h2>
        Document
        <Tip>
          Main file: add a file as the main content
        </Tip>
      </h2>
      <Connect(UploadButton)
        documentId="parentId"
        documentSharedId="parentSharedId"
        storeKey="storeKey"
      />
    </div>
  </Connect(NeedAuthorization)>
  <h2>
    Attachments
  </h2>
  <div
    className="attachments-list"
  />
  <Connect(NeedAuthorization)
    roles={
      Array [
        "admin",
        "editor",
      ]
    }
  >
    <div
      className="attachment-add"
    >
      <Connect(UploadAttachment)
        entityId="parentSharedId"
        storeKey="storeKey"
      />
    </div>
  </Connect(NeedAuthorization)>
</div>
`;

exports[`AttachmentsList when files is empty should render nothing if user not logged in 1`] = `
<div>
  <Connect(NeedAuthorization)>
    <div
      className="attachment-buttons main-file"
    >
      <h2>
        Document
        <Tip>
          Main file: add a file as the main content
        </Tip>
      </h2>
      <Connect(UploadButton)
        documentId="parentId"
        documentSharedId="parentSharedId"
        storeKey="storeKey"
      />
    </div>
  </Connect(NeedAuthorization)>
  <h2>
    Attachments
  </h2>
  <div
    className="attachments-list"
  />
  <Connect(NeedAuthorization)
    roles={
      Array [
        "admin",
        "editor",
      ]
    }
  >
    <div
      className="attachment-add"
    >
      <Connect(UploadAttachment)
        entityId="parentSharedId"
        storeKey="storeKey"
      />
    </div>
  </Connect(NeedAuthorization)>
</div>
`;
